improve readability and fix bug in FullScreenPanel.js

--- a/kono-front/src/styles/FullScreenPanel.module.scss
+++ b/kono-front/src/styles/FullScreenPanel.module.scss
@@ -5,6 +5,9 @@
 
         width: 100%;
         height: 100%;
+        
+        min-width: 176px;
+        min-height: 176px;
 
         @include flexbox(column, $center: true);
 
@@ -23,7 +26,6 @@
             
             img {
                 margin: 0 auto;
-                padding: 20px 5vw;
             }
 
         }
